--- a/assignment2/twbs_layout_1.html
+++ b/assignment2/twbs_layout_1.html
@@ -10,15 +10,27 @@
     <title>Document</title>
 </head>
 
+<style>
+    .box {
+        border: 1px solid black;
+        font-size: 40PX;
+        text-align: center;
+    }
+
+</style>
+
 <body>
-    <div class="container-fluid">
+      <!-- layout 1 -->
+      <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-4 col-lg-2 fs-3 p-2 text-center border m-2">Box-1</div>
-            <div class="col-12 col-md-4 col-lg-2 fs-3 p-2 text-center border m-2">Box-2</div>
-            <div class="col-12 col-md-4 col-lg-2 fs-3 p-2 text-center border m-2">Box-3</div>
-            <div class="col-12 col-md-4 col-lg-2 fs-3 p-2 text-center border m-2">Box-4</div>
+            <div class="col-sm-12 col-md-6 col-lg-3 box text-center ">box - 1</div>
+            <div class="col-sm-12 col-md-6 col-lg-3 box text-center">box - 2</div>
+            <div class="col-sm-12 col-md-6 col-lg-3 box text-center">box - 3</div>
+            <div class="col-sm-12 col-md-6 col-lg-3 box text-center">box - 4</div>
         </div>
     </div>
+
+   
 </body>
 
 </html>
