--- a/assignment2/twbs_layout_3.html
+++ b/assignment2/twbs_layout_3.html
@@ -9,28 +9,27 @@
     <title>Document</title>
 </head>
 <body>
-      <!-- layout 2 -->
-      <div class="container">
+      
+    <div class="container">
         <div class="row p-2 boX ">
             <div class="col boX">
                 <div class="row">
-                    <div class="col-xl-12 col-md-12 bg-warning boX">
+                    <div class="col-xl-12  bg-warning boX">
                         navigation
                     </div>
                 </div>
-
-                    <div class="row mt-2">
-                        <div class="col-xl-8 col-md-12 bg-danger boX"> Left Box </div>
-
-                    <div class="col-xl-4 col-sm-12 mt-1">
-                        <div class=" text-light bg-success p-2 boX">Right Box - 1</div>
-                        <div class=" text-light bg-success p-2 mt-2 boX">Right Box - 2</div>
-                        <div class=" text-light bg-success  p-2 mt-2 boX">Right Box - 3</div>
+    
+                <div class="row mt-2">
+                    <div class="col-xl-3 col-md-3 bg-danger px-2 pb-5 boX">Box 1 </div>
+                    <div class="col-xl-3 col-md-3 bg-success px-2 pb-5 boX">Box 2 </div>
+                    <div class="col-xl-3 col-md-3 bg-info px-2 pb-5 boX">Box 3</div>
+                    <div class="col-xl-3 col-md-3 bg-secondary  pb-5 boX">Box 4 </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
 
 </body>
 </html>
